--- a/CSS-Basics/index.html
+++ b/CSS-Basics/index.html
@@ -6,13 +6,21 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Arvo&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <main>
-      <section>
+      <section id="product-overview">
         <h1>Get the freedom you deserve.</h1>
-        <h1>Get the freedom you deserve.</h1>
+      </section>
+      <section id="plans">
+        <h1 class="section-title">Choose Your Plan</h1>
       </section>
     </main>
   </body>
