refactor: splitted codes into multiple files

--- a/CSS-Basics/index.html
+++ b/CSS-Basics/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
+    <link rel="stylesheet" href="shared.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
