refactor: added new css code from udemy

--- a/CSS-Background-Study/customers/index.html
+++ b/CSS-Background-Study/customers/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>uHost Customers</title>
     <link rel="shortcut icon" href="../favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700"
+      href="https://fonts.googleapis.com/css2?family=Arvo&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../shared.css" />
